# Cross-Platform-App-Login

./: README.md
Backend/: dbConnection.php  index.php  login.back.php  login.php  logout.php  register.php
Frontend/: CMakeLists.txt  CMakeLists.txt.user.e00aa4b  main.qml
Frontend/android/: AndroidManifest.xml
Frontend/content/: Screen01.qml  Screen02.qml
Frontend/content/components/: myButton.qml
Frontend/interfaces/: Home.qml  Login.qml  Register.qml  main.qml
Frontend/src/: main.cpp
